# arc-agi-3-benchmarking

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  games.txt  main.py  pyproject.toml  run_tests.sh
cli/: results_viewer.py  run_all.py
cli/static/: results_viewer.html
docs/: create_agent.md
scripts/: example_usage.py  test_all_models_parallel.py
src/arcagi3/: __init__.py  agent.py  arc3tester.py  checkpoint.py  cli.py  errors.py  game_client.py  models.yml  runner.py  schemas.py  types.py
src/arcagi3/adapters/: __init__.py  anthropic.py  deepseek.py  fireworks.py  gemini.py  grok.py  groq.py  hugging_face_fireworks.py  open_ai.py  openai_base.py  openrouter.py  provider.py  xai.py
src/arcagi3/adcr_agent/: README.md  __init__.py  agent.py  breakpoints.py  definition.py  state_memory_agent.py
src/arcagi3/adcr_agent/prompts/: action_instruct.prompt  analyze_instruct.prompt  find_action_instruct.prompt  (+3 more)
src/arcagi3/breakpoints/: __init__.py  client.py  manager.py  messages.py  server.py  spec.py
src/arcagi3/prompts/: __init__.py  action_instruct.prompt  analyze_instruct.prompt  compress_memory.prompt  find_action_instruct.prompt  manager.py  names.py  system.prompt
src/arcagi3/utils/: __init__.py  api_tests.py  cli.py  context.py  errors.py  formatting.py  image.py  metrics.py  parsing.py  rate_limiter.py  retry.py  scorecard_output.py  task_utils.py  truncate.py
tests/: test_agent_substeps.py  test_agent_workflow.py  test_breakpoints.py  test_context.py  test_prompts.py  test_provider_tracking.py  test_scorecard_flag.py
(+1 files in other folders)
